--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "lint": "eslint .",
     "format": "prettier --write .",
     "postinstall": "npx mrm lint-staged",
-    "prepare": "husky && husky install"
+    "prepare": "husky && husky install",
+    "sample-app": "pnpm --filter sample-app",
+    "common": "pnpm --filter common"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
@@ -26,6 +28,7 @@
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@eslint/js": "^9.4.0",
+    "@types/node": "^20.14.2",
     "eslint": "8.x",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
@@ -34,6 +37,7 @@
     "husky": "^9.0.11",
     "lint-staged": "^15.2.5",
     "prettier": "^3.3.2",
+    "typescript": "^5.2.2",
     "typescript-eslint": "^7.13.0"
   }
 }
