fix: 공통 tsconfig 수정 및 husky 수정

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -9,6 +9,9 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "jsx": "react-jsx",
-    "moduleResolution": "node"
+    "moduleResolution": "bundler",
+    "target": "es5",
+    "module": "ESNext",
+    "outDir": "./dist"
   }
 }
