--- a/apps/sample-app/tsconfig.json
+++ b/apps/sample-app/tsconfig.json
@@ -1,5 +1,12 @@
 {
   "extends": "../../tsconfig.base.json",
-  "compilerOptions": {},
+  "compilerOptions": {
+    "composite": true,
+    "skipLibCheck": true,
+    "module": "ESNext",
+    "moduleResolution": "bundler",
+    "allowSyntheticDefaultImports": true,
+    "strict": true
+  },
   "include": ["src", "vite.config.ts"]
 }
