--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -3,8 +3,8 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "main": "./dist/common.js",
-  "types": "./dist/main.d.ts",
+  "main": "src/common.js",
+  "types": "src/main.d.ts",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
