feat: common main 경로 수정

--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "main": "src/common.js",
+  "main": "src/main.ts",
   "types": "src/main.d.ts",
   "scripts": {
     "dev": "vite",
